# qtdeviceutilities

./: CMakeLists.txt
src/: CMakeLists.txt
src/networksettings/: CMakeLists.txt  qnetworksettingsaddressmodel.cpp  qnetworksettingsinterface.cpp  qnetworksettingsinterface.h  qnetworksettingsservice.cpp  qnetworksettingsservice.h
src/networksettings/android/: androidInterfaceDB.cpp  androidInterfaceDB.h  androidServiceDB.cpp  androidServiceDB.h  qnetworksettingsinterface_p.cpp  qnetworksettingsinterface_p.h  qnetworksettingsmanager_p.cpp  qnetworksettingsmanager_p.h  qnetworksettingsservice_p.cpp  qnetworksettingsservice_p.h  qnetworksettingsuseragent_p.cpp  qnetworksettingsuseragent_p.h
src/networksettings/connman/: qnetworksettingsinterface_p.cpp  qnetworksettingsmanager_p.cpp
src/networksettingsqml/: CMakeLists.txt
